[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["vikto_konst <viktoconst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
